# nai-security

./: .gitignore  README.md  pyproject.toml  tox.ini
docs/: NAI_SECURITY_ARCHITECTURE.md  changelog.md  issues.md
nai_security/: AXES_INTEGRATION.md  __init__.py  admin.py  apps.py  conf.py  middleware.py  signals.py  tasks.py  utils.py
nai_security/admin/: whitelisted_user_admin.py
nai_security/handlers/: __init__.py  axes_integration.py  progressive_lockout.py
nai_security/management/commands/: download_geoip.py  sync_security_lists.py
nai_security/middleware/: __init__.py  lockout_message.py  security.py
nai_security/migrations/: 0001_initial.py  0002_securitysettings_max_login_attempts.py  0003_whitelisteduser.py  0004_securitysettings_axes_attempt_expiry_enabled_and_more.py  0005_alter_whitelisteduser_exemption_type.py
nai_security/models/: __init__.py  allowed_country.py  axes_proxy.py  blocked_country.py  blocked_domain.py  blocked_email.py  blocked_ip.py  blocked_user_agent.py  login_history.py  rate_limit_rule.py  security_log.py  security_settings.py  whitelisted_ip.py  whitelisted_user.py
nai_security/services/: __init__.py  auto_blocker.py  sync_services.py
nai_security/templates/admin/: login.html
scripts/: smoke_100x_lockout.py
tests/: README.md  settings.py  test_admin.py  test_auto_blocker.py  test_axes_integration.py  test_middleware.py  test_models.py  test_progressive_lockout.py  test_signals.py  test_utils.py  urls.py
